Added profiles, papers, and pictures

--- a/research.html
+++ b/research.html
@@ -1,43 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Baskervville&display=swap');
-      </style>
-    <link rel="stylesheet" href="css/stylesheet.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Research</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Baskervville&display=swap');
+  </style>
+  <link rel="stylesheet" href="css/stylesheet.css">
 </head>
+
 <body>
 
-<div class = "container">
-<header>
-  <div class = "row">
-    <div class="col-sm">
-        <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
+  <div class="container">
+    <header>
+      <div class="row">
+        <div class="col-sm">
+          <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
             <div class="container">
-                <a class="navbar-brand me-auto" href="#">
-                  <img src="website_imgs/Iron_logo.png"  alt="IRON logo" height="75" class="d-inline-block align-top"> </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo2" aria-controls="navbarTogglerDemo2" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo2">
-            <ul class="navbar-nav  ms-auto mb-2">
-            <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link active text-decoration-underline" aria-current="page" href="research.html">Research</a></li>
-            <li class="nav-item"><a class="nav-link active" aria-current="page" href="team.html">Team</a></li>
-            <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contact</a></li>
-            </ul>
+              <a class="navbar-brand me-auto" href="#">
+                <img src="website_imgs/Iron_logo.png" alt="IRON logo" height="75" class="d-inline-block align-top"> </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarTogglerDemo2" aria-controls="navbarTogglerDemo2" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo2">
+                <ul class="navbar-nav  ms-auto mb-2">
+                  <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
+                  <li class="nav-item"><a class="nav-link active text-decoration-underline" aria-current="page"
+                      href="research.html">Research</a></li>
+                  <li class="nav-item"><a class="nav-link active" aria-current="page" href="team.html">Team</a></li>
+                  <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
         </div>
-        </div>
-    </nav>
-    </div>
-    </div>
-</header>
+      </div>
+    </header>
 
-<!--
+    <!--
   Example code for Research presentation
   <div class = "row"><h1 class = "text-center p-4">Current Research</h1></div>
 <div class="row mb-5 mt-4">
@@ -56,68 +63,110 @@
 <hr>
 -->
 
-<div class = "row"><h1 class = "text-center p-4">Current Research</h1></div>
-<div class="row mb-5 mt-4">
-  <div class="col-sm-5 ">
-    <img src="website_imgs/college-lecture.jpeg" alt="Creative Commons license image of a college lecture." class = "pb-4">
-  </div>
-  <div class="col-sm">
-      <h4>Guiding the Development of Undergraduate Educational Robotics</h4>
-      <p>Bryce Ikeda, Janine Hoelscher, Ron Alterovitz, Daniel Szafir
-      <br>Proceedings of the ACM Conference on Global Computing Education
-      <br>December 2023 
-      <br><a href="pdfs/guiding_the_dev_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light  mt-2">PDF</a>
-    </p>
-  </div>
-</div>
-<hr>
+    <div class="row">
+      <h1 class="text-center p-4">Current Research</h1>
+    </div>
+    <div class="row mb-5 mt-4">
+      <div class="col-sm-5 ">
+        <img src="website_imgs/CyberPhysicalControlRoomTeaser.png"
+          alt="Creative Commons license image of a college lecture." class="pb-4">
+      </div>
+      <div class="col-sm">
+        <h4>🏆The Cyber-Physical Control Room: A Mixed Reality Interface for Mobile Robot Teleoperation and Human-Robot
+          Teaming</h4>
+        <p>Michael E. Walker, Maitrey Gramopadhye, Bryce Ikeda, Jack Burns, Daniel Szafir
+          <br>ACM/IEEE International Conference on Human-Robot Interaction (HRI)
+          <br>March 2024
+          <br><a href="pdfs/cyberphysical-controlroom.pdf"
+            class="btn btn-primary btn-sm rounded-0 text-light  mt-2">PDF</a>
+        </p>
+      </div>
+    </div>
+    <hr>
 
-<div class = "row mb-5">
-  <div class="col-sm-5">
-    <img src="website_imgs/human-robot-interaction.jpg" alt="Creative Commons license image of a woman interacting with a robot." class = "pb-4">
-  </div>
-  <div class="col-sm">
-      <h4>Virtual, Augmented, and Mixed Reality for Human-robot Interaction: A Survey and Virtual Design Element Taxonomy</h4>
-      <p>Michael Walker, Thao Phung, Tathagata Chakraborti, Tom Williams, Daniel Szafir
-      <br>ACM Transactions on Human-Robot Interaction
-      <br>July 2023
-      <br><a href="pdfs/virtual-augmented_pdf" class="btn bg-light btn-sm rounded-0 text-dark mt-2">PDF</a>
-    </p>
-  </div>
-</div>
-<hr>
+    <div class="row mb-5">
+      <div class="col-sm-5">
+        <img src="website_imgs/PRogramARTeaser.png"
+          alt="Creative Commons license image of a woman interacting with a robot." class="pb-4">
+      </div>
+      <div class="col-sm">
+        <h4>PRogramAR: Augmented Reality End-User Robot Programming</h4>
+        <p>Bryce Ikeda, Daniel Szafir
+          <br>ACM Transactions on Human-Robot Interaction
+          <br>March 2024
+          <br><a href="pdfs/PRogramAR.pdf" class="btn bg-light btn-sm rounded-0 text-dark mt-2">PDF</a>
+        </p>
+      </div>
+    </div>
+    <hr>
 
-<div class = "row mb-5">
-  <div class="col-sm-5">
-    <img src="website_imgs/language-models.jpg" alt="Creative Commons license image of a collection of words on a digital display." class = "pb-4">
-  </div>
-  <div class="col-sm">
-      <h4>Generating Executable Action Plans with Environmentally-Aware Language Models</h4>
-      <p>Maitrey Gramopadhye and Daniel Szafir
-      <br>Cornell University
-      <br>May 2023
-      <br><a href="pdfs/generating-exec_pdf.pdf" class="btn bg-secondary btn-sm rounded-0 text-dark  mt-2">PDF</a>
-    </p>
-  </div>
-</div>
-<hr>
+    <div class="row mb-5 mt-4">
+      <div class="col-sm-5 ">
+        <img src="website_imgs/GuidingtheDevelopmentTeaser.png"
+          alt="Creative Commons license image of a college lecture." class="pb-4">
+      </div>
+      <div class="col-sm">
+        <h4>🏆Guiding the Development of Undergraduate Educational Robotics</h4>
+        <p>Bryce Ikeda, Janine Hoelscher, Ron Alterovitz, Daniel Szafir
+          <br>Proceedings of the ACM Conference on Global Computing Education
+          <br>December 2023
+          <br><a href="pdfs/guiding_the_dev_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light  mt-2">PDF</a>
+        </p>
+      </div>
+    </div>
+    <hr>
 
-<div class = "row mb-5">
-  <div class="col-sm-5">
-    <img src="website_imgs/human-robot-conversation-group.jpg" alt="Creative Commons license image of a woman interacting with a robot." class = "pb-4">
-  </div>
-  <div class="col-sm">
-      <h4>Predicting Positions of People in Human-Robot Conversational Groups</h4>
-      <p>Hooman Hedayati and Daniel Szafir
-      <br>17th ACM/IEEE International Conference on Human-Robot Interaction (HRI)
-      <br>March 2022
-      <br><a href="pdfs/predicting_positions_pdf.pdf" class="btn btn-primary btn-sm rounded-0 text-light mt-2">PDF</a>
-    </p>
-  </div>
-</div>
-<hr>
+    <div class="row mb-5">
+      <div class="col-sm-5">
+        <img src="website_imgs/TaxonomyTeaser.png"
+          alt="Creative Commons license image of a woman interacting with a robot." class="pb-4">
+      </div>
+      <div class="col-sm">
+        <h4>Virtual, Augmented, and Mixed Reality for Human-robot Interaction: A Survey and Virtual Design Element
+          Taxonomy</h4>
+        <p>Michael Walker, Thao Phung, Tathagata Chakraborti, Tom Williams, Daniel Szafir
+          <br>ACM Transactions on Human-Robot Interaction
+          <br>July 2023
+          <br><a href="pdfs/VAM-Taxonomy.pdf" class="btn bg-light btn-sm rounded-0 text-dark mt-2">PDF</a>
+        </p>
+      </div>
+    </div>
+    <hr>
 
-<div class = "row">
+    <div class="row mb-5">
+      <div class="col-sm-5">
+        <img src="website_imgs/GeneratingExecutableTeaser.png"
+          alt="Creative Commons license image of a collection of words on a digital display." class="pb-4">
+      </div>
+      <div class="col-sm">
+        <h4>Generating Executable Action Plans with Environmentally-Aware Language Models</h4>
+        <p>Maitrey Gramopadhye and Daniel Szafir
+          <br>Cornell University
+          <br>May 2023
+          <br><a href="pdfs/generating-exec_pdf.pdf" class="btn bg-secondary btn-sm rounded-0 text-dark  mt-2">PDF</a>
+        </p>
+      </div>
+    </div>
+    <hr>
+
+    <div class="row mb-5">
+      <div class="col-sm-5">
+        <img src="website_imgs/PredictingPositionsTeaser.png"
+          alt="Creative Commons license image of a woman interacting with a robot." class="pb-4">
+      </div>
+      <div class="col-sm">
+        <h4>Predicting Positions of People in Human-Robot Conversational Groups</h4>
+        <p>Hooman Hedayati and Daniel Szafir
+          <br>International Conference on Human-Robot Interaction (HRI)
+          <br>March 2022
+          <br><a href="pdfs/predicting_positions_pdf.pdf"
+            class="btn btn-primary btn-sm rounded-0 text-light mt-2">PDF</a>
+        </p>
+      </div>
+    </div>
+    <hr>
+
+    <!-- <div class = "row">
   <div class="col-sm-5">
     <img src="website_imgs/augmented-reality.jpg" alt="Creative Commons license image of an augmented reality." class = "pb-4">
   </div>
@@ -129,26 +178,30 @@
       <br><a href="pdfs/augmented_reality_pdf.pdf" class="btn bg-light btn-sm rounded-0 text-dark mt-2">PDF</a>
     </p>
   </div>
-</div>
+</div> -->
 
 
-<div class="container">
-  <footer class="py-4 my-4 mb-0">
-  <div class = "col">
-    <div class="text-center">
-      <span class="text-center text-white">
-        IRON Lab<br>
-        Sitterson Hall <br> 
-        <a href="https://www.unc.edu/" class="link-light text-decoration-none">University of North Carolina at Chapel Hill</a> <br>
-        232 S Columbia St, Chapel Hill, NC 27514</span>
+    <div class="container">
+      <footer class="py-4 my-4 mb-0">
+        <div class="col">
+          <div class="text-center">
+            <span class="text-center text-white">
+              IRON Lab<br>
+              Sitterson Hall <br>
+              <a href="https://www.unc.edu/" class="link-light text-decoration-none">University of North Carolina at
+                Chapel Hill</a> <br>
+              232 S Columbia St, Chapel Hill, NC 27514</span>
+          </div>
+        </div>
+      </footer>
     </div>
+
+
   </div>
-  </footer>
-</div>
 
-
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
