--- a/index.html
+++ b/index.html
@@ -1,133 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IRON Lab</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/stylesheet.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Baskervville&display=swap');
-    </style>
-  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>IRON Lab</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/stylesheet.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+    integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Baskervville&display=swap');
+  </style>
+  <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
+    integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
+    integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
+    crossorigin="anonymous"></script>
 
 </head>
 
 <body>
 
-<div class = "container">
-  <header>
-    <div class = "row">
-      <div class="col">
+  <div class="container">
+    <header>
+      <div class="row">
+        <div class="col">
           <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
-              <div class="container">
-                  <a class="navbar-brand me-auto" href="#">
-                    <img src="website_imgs/Iron_logo.png" alt=" IRON logo" height="75" class="d-inline-block align-top"> </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo2" aria-controls="navbarTogglerDemo2" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo2">
-              <ul class="navbar-nav ms-auto mb-0">
-              <li class="nav-item"><a class="nav-link active text-decoration-underline" aria-current="page" href="index.html">Home</a></li>
-              <li class="nav-item"><a class="nav-link active" aria-current="page" href="research.html">Research</a></li>
-              <li class="nav-item"><a class="nav-link active" aria-current="page" href="team.html">Team</a></li>
-              <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contact</a></li>
-              </ul>
-          </div>
-          </div>
-      </nav>
+            <div class="container">
+              <a class="navbar-brand me-auto" href="#">
+                <img src="website_imgs/Iron_logo.png" alt=" IRON logo" height="75" class="d-inline-block align-top">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarTogglerDemo2" aria-controls="navbarTogglerDemo2" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo2">
+                <ul class="navbar-nav ms-auto mb-0">
+                  <li class="nav-item"><a class="nav-link active text-decoration-underline" aria-current="page"
+                      href="index.html">Home</a></li>
+                  <li class="nav-item"><a class="nav-link active" aria-current="page" href="research.html">Research</a>
+                  </li>
+                  <li class="nav-item"><a class="nav-link active" aria-current="page" href="team.html">Team</a></li>
+                  <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+        </div>
       </div>
-      </div>
-  </header>
+    </header>
 
-<div class = "mt-1 row">
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="carousel/otter1.jpg" alt="Otters! photo from https://animals.sandiegozoo.org/animals/otter">
+    <div class="mt-1 row">
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <!-- <div class="carousel-item active">
+            <img class="d-block w-100" src="carousel/otter1.jpg"
+              alt="Otters! photo from https://animals.sandiegozoo.org/animals/otter">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="carousel/otter2.jpg" alt="Otters! Photo from public domain">
+          </div> -->
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="carousel/group_labs_photo.jpg" alt="Third slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only"></span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only"></span>
+        </a>
+      </div>
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="carousel/otter2.jpg" alt="Otters! Photo from public domain">
+
+
+    <div class="row">
+      <h2 class="text-center mt-5">About</h2>
+      <p class="text-center">The Interactive Robotics and Novel Technologies (IRON) Laboratory is a research group at
+        the University of North Carolina at Chapel Hill partnered with the University of Colorado Boulder that studies
+        human-robot interaction (HRI) and human-computer interaction (HCI). The lab is housed within Sitterson Hall and
+        serves as an interdisciplinary focal point for researchers with a variety of backgrounds, including computer
+        science, mechanical engineering, aerospace engineering, and creative technologies and design. Our main focus is
+        improving human-robot teaming through the development of new algorithms, interfaces, and robotic technologies.
+        Please see the Research page for more information about our work and if you are interested in getting involved
+        in the lab.</p>
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="carousel/group_labs_photo.jpg" alt="Third slide">
+
+    <div class="row">
+      <h2 class="text-center mt-5 mb-3">Recent News</h2>
+      <div class="col-sm mb-3">
+        <div class="card mx-auto" style="width: 18rem;">
+          <img class="card-im g-top" src="website_imgs/college-lecture.jpeg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Guiding the Development of Undergraduate Education Robotics</h5>
+            <p class="card-text">Proceedings of the ACM Conference on Global Computing Education</p>
+            <a href="https://dl.acm.org/doi/abs/10.1145/3576882.3617928" class="btn btn-primary">Read it here</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm mb-3">
+        <div class="card mx-auto" style="width: 18rem;">
+          <img class="card-img-top" src="website_imgs/human-robot-interaction.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Virtual, Augmented, and Mixed Reality for Human-robot Interaction: A Survey and
+              Virtual Design Element Taxonomy</h5>
+            <p class="card-text">ACM Transactions on Human-Robot Interaction</p>
+            <a href="virtual-augmented_pdf" class="btn btn-primary">Read it here</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm mb-3 mt-2">
+        <div class="card mx-auto" style="width: 18rem;">
+          <img class="card-img-top" src="website_imgs/human-robot-conversation-group.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">Predicting Positions of People in Human-Robot Conversational Groups</h5>
+            <p class="card-text">17th ACM/IEEE International Conference on Human-Robot Interaction (HRI)</p>
+            <a href="predicting_positions_pdf.pdf" class="btn btn-primary">Read it here</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <footer class="py-4">
+        <div class="col">
+          <div class="text-center">
+            <span class="text-center text-white">
+              IRON Lab<br>
+              Sitterson Hall <br>
+              <a href="https://www.unc.edu/" class="link-light text-decoration-none">University of North Carolina at
+                Chapel Hill</a> <br>
+              232 S Columbia St, Chapel Hill, NC 27514</span>
+          </div>
+        </div>
+      </footer>
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only"></span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only"></span>
-  </a>
-</div>
-</div>
 
 
-    <div class = "row">
-        <h2  class="text-center mt-5">About</h2>
-        <p class="text-center">The Interactive Robotics and Novel Technologies (IRON) Laboratory is a research group at the University of North Carolina at Chapel Hill partnered with the University of Colorado Boulder that studies human-robot interaction (HRI) and human-computer interaction (HCI). The lab is housed within Sitterson Hall and serves as an interdisciplinary focal point for researchers with a variety of backgrounds, including computer science, mechanical engineering, aerospace engineering, and creative technologies and design. Our main focus is improving human-robot teaming through the development of new algorithms, interfaces, and robotic technologies. Please see the Research page for more information about our work and if you are interested in getting involved in the lab.</p>
-    </div>
-
-    <div class = "row">
-        <h2  class="text-center mt-5 mb-3">Recent News</h2>
-        <div class = "col-sm mb-3">
-            <div class="card mx-auto" style="width: 18rem;">
-                <img class="card-im g-top" src="website_imgs/college-lecture.jpeg" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Guiding the Development of Undergraduate Education Robotics</h5>
-                  <p class="card-text">Proceedings of the ACM Conference on Global Computing Education</p>
-                  <a href="https://dl.acm.org/doi/abs/10.1145/3576882.3617928" class="btn btn-primary">Read it here</a>
-                </div>
-              </div>
-        </div>
-        <div class = "col-sm mb-3">
-            <div class="card mx-auto" style="width: 18rem;">
-                <img class="card-img-top" src="website_imgs/human-robot-interaction.jpg" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Virtual, Augmented, and Mixed Reality for Human-robot Interaction: A Survey and Virtual Design Element Taxonomy</h5>
-                  <p class="card-text">ACM Transactions on Human-Robot Interaction</p>
-                  <a href="virtual-augmented_pdf" class="btn btn-primary">Read it here</a>
-                </div>
-              </div>
-        </div>
-        <div class = "col-sm mb-3 mt-2">
-          <div class="card mx-auto" style="width: 18rem;">
-              <img class="card-img-top" src="website_imgs/human-robot-conversation-group.jpg" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Predicting Positions of People in Human-Robot Conversational Groups</h5>
-                <p class="card-text">17th ACM/IEEE International Conference on Human-Robot Interaction (HRI)</p>
-                <a href="predicting_positions_pdf.pdf" class="btn btn-primary">Read it here</a>
-              </div>
-            </div>
-      </div>
-    </div>
-    
-        <div class="container">
-          <footer class="py-4">
-            <div class = "col">
-              <div class="text-center">
-                <span class="text-center text-white">
-                  IRON Lab<br>
-                  Sitterson Hall <br> 
-                  <a href="https://www.unc.edu/" class="link-light text-decoration-none">University of North Carolina at Chapel Hill</a> <br>
-                  232 S Columbia St, Chapel Hill, NC 27514</span>
-              </div>
-            </div>
-            </footer>
-          </div>
-</div>
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 
 </body>
+
 </html>
