--- a/team.html
+++ b/team.html
@@ -195,6 +195,39 @@
           <a href="https://github.com/TigerLillyAnn" class="btn bg-light btn-sm rounded-0 text-dark ">GitHub</a>
         </div>
       </div>
+
+      <div class="row pb-5 mt-4 pt-2">
+        <div class="col pb-4 text-left"> <img src="" style="max-width: 200px;"
+            alt="" class="rounded"> </div>
+        <div class="col-md-9 pb-4">
+          <h4> Harper Callahan </h4>
+          <p>BIO</p>
+          <a href="" class="btn btn-primary btn-sm rounded-0 text-light">LinkedIn</a>
+          <a href="" class="btn bg-light btn-sm rounded-0 text-dark ">GitHub</a>
+        </div>
+      </div>
+
+      <div class="row pb-5 mt-4 pt-2">
+          <div class="col pb-4 text-left"> <img src="" style="max-width: 200px;"
+              alt="" class="rounded"> </div>
+          <div class="col-md-9 pb-4">
+            <h4> Brian De La Cruz </h4>
+              <p>BIO</p>
+              <a href="" class="btn btn-primary btn-sm rounded-0 text-light">LinkedIn</a>
+              <a href="" class="btn bg-light btn-sm rounded-0 text-dark ">GitHub</a>
+          </div>
+        </div> 
+
+      <div class="row pb-5 mt-4 pt-2">
+        <div class="col pb-4 text-left"> <img src="" style="max-width: 200px;"
+            alt="" class="rounded"> </div>
+        <div class="col-md-9 pb-4">
+          <h4> Andew Lauer </h4>
+            <p>BIO</p>
+            <a href="" class="btn btn-primary btn-sm rounded-0 text-light">LinkedIn</a>
+            <a href="" class="btn bg-light btn-sm rounded-0 text-dark ">GitHub</a>
+        </div>
+      </div>
     </div>
 
 
