--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
   <title>IRON Lab</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -27,23 +27,21 @@
   <div class="container">
     <header>
       <div class="row">
-        <div class="col">
+        <div class="col-sm">
           <nav class="navbar navbar-expand-sm navbar-light col-sm-12">
             <div class="container">
               <a class="navbar-brand me-auto" href="#">
-                <img src="website_imgs/Iron_logo.png" alt=" IRON logo" height="75" class="d-inline-block align-top">
-              </a>
+                <img src="website_imgs/Iron_logo.png" alt=" IRON logo" height="75" class="d-inline-block align-top"> </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarTogglerDemo2" aria-controls="navbarTogglerDemo2" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarTogglerDemo2">
-                <ul class="navbar-nav ms-auto mb-0">
+                <ul class="navbar-nav ms-auto mb-2">
                   <li class="nav-item"><a class="nav-link active text-decoration-underline" aria-current="page"
                       href="index.html">Home</a></li>
-                  <li class="nav-item"><a class="nav-link active" aria-current="page" href="research.html">Research</a>
-                  </li>
+                  <li class="nav-item"><a class="nav-link active" aria-current="page" href="research.html">Research</a></li>
                   <li class="nav-item"><a class="nav-link active" aria-current="page" href="team.html">Team</a></li>
                   <li class="nav-item"><a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
                   </li>
