--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
   <title>Team</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -28,7 +28,7 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarTogglerDemo2">
-                <ul class="navbar-nav  ms-auto mb-2">
+                <ul class="navbar-nav ms-auto mb-2">
                   <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
                   <li class="nav-item"><a class="nav-link active" aria-current="page" href="research.html">Research</a>
                   </li>
