--- a/team.html
+++ b/team.html
@@ -178,6 +178,23 @@
       </div>
     </div>
 
+    <div class="row pb-5 mt-4 pt-2">
+    <div class="col pb-4 text-left"> <img src="headshots/SpirosTsalikis.jpg" style="max-width: 200px;" alt="Sprios Tsalikis" class="rounded"> </div>
+      <div class="col-md-9 pb-4">
+          <h4> Spiros Tsalikis </h4>
+          <p>BIO
+            Hello! My name is Spiros Tsalikis (originally known as Spyridon Tsalikis). I was born and raised in Thessaloniki, Greece, moved to the USA in 2019, and currently living in Chapel Hill, NC, USA. I am a Research and Development Engineer at Kitware. C++/Clion are my best pals in developing high-performance and quality code, preferably, related to Geometry! I am interested in Computational Geometry, Mesh Generation, Simulations, 3D Visualization, AR/VR, Parallel Computing, Performance Optimization, Robotics, and Algorithms. I earned my B.Sc. in Informatics at AUTH, my M.Sc. in Computer Science at ODU, and currently I am pursuing my Ph.D. in Computer Science at UNC.
+            Additionally, I have a passion for playing the Cello. That's why I also earned my B.M. at the New Conservatory of Thessaloniki. I have played in many concerts with various orchestras and famous artists. Currently, I am in the process of composing my own music.
+            Regardless of what I do in my life, I always try to be enthusiastic and recommend creative ideas. In case of need, I can easily adapt to new circumstances. Although I am a Computer Scientist, being a team-player is my second nature, thanks to my orchestra's experiences. But above all, my hard work will always be the foundation of everything I do.
+          </p>
+            <a href="https://www.linkedin.com/in/spiros-tsalikis/" class="btn btn-primary btn-sm rounded-0 text-light">LinkedIn</a>
+            <a href="https://github.com/spyridon97" class="btn bg-light btn-sm rounded-0 text-dark ">GitHub</a>
+            <a href="https://www.spirostsalikis.com/" class="btn btn-primary btn-sm rounded-0 text-light">Website</a>
+          </div>
+    </div>
+  </div>
+
+
     <div class="row">
       <div class="col-sm">
         <h2>Undergraduate Students</h2>
