--- a/team.html
+++ b/team.html
@@ -167,9 +167,7 @@
             class="rounded"> </div>
         <div class="col-md-9 pb-4">
           <h4> Yang Yue </h4>
-          <p>Yue Yang received his master degree in computer science in 2023 from Georgia Institute of Technology,
-            and is now a Ph.D. student in computer science at the University of North Carolina at Chapel Hill. His
-            research interests include human robot interaction, imitation learning, generative models.</p>
+          <p>I am currently a Computer Science PhD student at The University of North Carolina at Chapel Hill (UNC-CH) , under the co-supervision of Prof. Daniel J. Szafir and Prof. Gedas Bertasius. My research interests lie in Robotics, Machine Learning (ML), and their application in Human-Robot Interaction (HRI)</p>
           <a href="https://yy-gx.github.io/" class="btn btn-primary btn-sm rounded-0 text-light">Website</a>
           <a href="https://www.linkedin.com/in/yue-yang-6a1493185/"
             class="btn bg-light btn-sm rounded-0 text-dark">LinkedIn</a>
