--- a/team.html
+++ b/team.html
@@ -192,6 +192,14 @@
     </div>
   </div>
 
+    <div class="row pb-5 mt-4 pt-2">
+      <div class="col pb-4 text-left"> <img src="headshots/Chenyang Ma.jpg" style="max-width: 200px;" alt="Chenya Ma" class="rounded"> </div>
+        <div class="col-md-9 pb-4">
+            <h4> Chenya Ma </h4>
+            <p>Chenyang Ma is a first-year PhD Student in the Department of Computer Science at UNC-CH. His research focuses on machine learning and computer vision problems related to robotics and virtual reality, particularly human-in-the-loop perception that would benefit personal care and robot learning. He got his M.S. and B.Eng. degrees from The Ohio State University and Nanjing University of Posts and Telecommunications.</p>
+           </div>
+      </div>
+    </div>
 
     <div class="row">
       <div class="col-sm">
